// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DogPhoto Render Test DogPhotoView Render Snapshot 1`] = `
<Image
  source={
    {
      "uri": "TEST_MESSAGE",
    }
  }
  style={
    [
      undefined,
      {
        "height": 525,
        "width": 525,
      },
    ]
  }
  testID="image"
/>
`;

exports[`DogPhotoView Render Test 1`] = `
<Image
  source={
    {
      "uri": "https://images.dog.ceo/breeds/retriever-flatcoated/n02099267_1451.jpg",
    }
  }
  style={
    [
      undefined,
      {
        "height": 525,
        "width": 525,
      },
    ]
  }
  testID="image"
/>
`;
